[package]
name = "multiproxy-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
# socks5-proto = { version = "0.3.3", default-features = false }
# socks5-server = {version = "0.8.3", default-features = false}
tokio = { version = "1.24.2", default-features = false, features = ["net", "macros", "rt-multi-thread", "sync", "io-util"] }
async-trait = { version = "0.1.63", default-features = false }
clap = { version = "4.2.5", features = ["derive"] }
rand = { version = "0.8.5"}

[build]
rustflags = ["-A dead_code", "-A unused_variables"]
